--- a/MyPad/Views/MainWindow.xaml
+++ b/MyPad/Views/MainWindow.xaml
@@ -144,7 +144,7 @@
 
     <!-- ウィンドウコマンド(左) -->
     <m:MetroWindow.LeftWindowCommands>
-        <m:WindowCommands Margin="0 2 0 0">
+        <m:WindowCommands Margin="0 1 0 0">
             <!-- メニューバー -->
             <ContentControl Style="{StaticResource RegionContent}" p:RegionManager.RegionName="MenuBarRegion1"
                             Visibility="{qc:Binding '$P ? Visibility.Visible : Visibility.Collapsed', P={Binding Settings.System.ShowMenuBar, Mode=OneWay}}"
@@ -258,7 +258,7 @@
                             <Grid.ContextMenu>
                                 <ContextMenu/>
                             </Grid.ContextMenu>
-                            <TextBlock      Grid.Row="1" Margin="3 0" Text="{Binding Label, Mode=OneWay}" FontSize="14"/>
+                            <TextBlock      Grid.Row="1" Margin="3 0" Text="{Binding Label, Mode=OneWay}" FontSize="{DynamicResource MahApps.Font.Size.Default}"/>
                             <ContentControl Grid.Row="3" Margin="3 0" Content="{Binding Tag, Mode=OneWay}" IsTabStop="False" Focusable="False"/>
                         </Grid>
                     </DataTemplate>
@@ -442,7 +442,7 @@
                                     <StackPanel DataContext="{Binding Data.ActiveTextEditor.Value, Source={StaticResource Proxy}, Mode=OneWay}" Margin="5 0 0 0">
                                         <StackPanel.Resources>
                                             <Style x:Key="PropertyName" TargetType="{x:Type TextBlock}" BasedOn="{StaticResource Default.TextBlock}">
-                                                <Setter Property="FontSize" Value="14"/>
+                                                <Setter Property="FontSize" Value="{DynamicResource MahApps.Font.Size.Default}"/>
                                             </Style>
                                             <Style x:Key="PropertyValue" TargetType="{x:Type TextBlock}" BasedOn="{StaticResource Default.TextBlock}">
                                                 <Setter Property="Margin" Value="20 0 0 5"/>
@@ -872,7 +872,7 @@
 
             <!-- タブコントロール(ボトム) -->
             <TabControl Grid.Column="2" Grid.Row="2" x:Name="BottomContent"
-                        TabStripPlacement="Bottom" m:HeaderedControlHelper.HeaderFontWeight="Bold" m:HeaderedControlHelper.HeaderFontSize="10"
+                        TabStripPlacement="Bottom" m:HeaderedControlHelper.HeaderFontWeight="Bold" m:HeaderedControlHelper.HeaderFontSize="{DynamicResource MahApps.Font.Size.FloatingWatermark}"
                         Visibility="{qc:Binding '$P ? Visibility.Visible : Visibility.Collapsed', P={Binding IsVisibleBottomContent, RelativeSource={RelativeSource AncestorType={x:Type Window}}, Mode=OneWay}}">
                 <TabItem Header="{le:Loc Command_Terminal}">
                     <!-- ターミナル -->
