--- a/MyPad/Views/Styles/Generic.xaml
+++ b/MyPad/Views/Styles/Generic.xaml
@@ -1,8 +1,7 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:m="http://metro.mahapps.com/winfx/xaml/controls"
-                    xmlns:p="http://prismlibrary.com/" 
-                    xmlns:s="clr-namespace:System;assembly=System.Runtime"
+                    xmlns:p="http://prismlibrary.com/"
                     xmlns:behaviors="clr-namespace:MyPad.Views.Behaviors"
                     xmlns:controls="clr-namespace:MyPad.Views.Controls">
     
@@ -14,13 +13,6 @@
         <ResourceDictionary Source="./Controls/MarkDig.xaml"/>
         <ResourceDictionary Source="./Controls/ToastNotifications.xaml"/>
     </ResourceDictionary.MergedDictionaries>
-
-    <s:Double x:Key="MahApps.Font.Size.Window.Title">13</s:Double>
-    <s:Double x:Key="MahApps.Font.Size.Menu">12</s:Double>
-    <s:Double x:Key="MahApps.Font.Size.ContextMenu">12</s:Double>
-    <s:Double x:Key="MahApps.Font.Size.TabItem">20</s:Double>
-    <s:Double x:Key="App.Font.Size.Dialog.Message">14</s:Double>
-    <s:Double x:Key="App.Font.Size.Overlay.Message">20</s:Double>
 
     <Style TargetType="{x:Type controls:NumericUpDown}" BasedOn="{StaticResource Default.NumericUpDown}"/>
 
@@ -82,7 +74,7 @@
         <Setter Property="behaviors:WindowAttachedBehavior.DraggableAnywhere" Value="True"/>
         <Style.Resources>
             <Style TargetType="{x:Type TextBlock}" BasedOn="{StaticResource Default.TextBlock}">
-                <Setter Property="FontSize" Value="{StaticResource App.Font.Size.Dialog.Message}"/>
+                <Setter Property="FontSize" Value="{DynamicResource MahApps.Font.Size.Dialog.Message}"/>
                 <Setter Property="TextWrapping" Value="WrapWithOverflow"/>
             </Style>
             <Style TargetType="{x:Type Button}" BasedOn="{StaticResource Default.Button}">
@@ -97,7 +89,7 @@
         <Style.Resources>
             <Style TargetType="{x:Type TextBlock}" BasedOn="{StaticResource Default.TextBlock}">
                 <Setter Property="Foreground" Value="{DynamicResource MahApps.Brushes.ThemeForeground}"/>
-                <Setter Property="FontSize" Value="{StaticResource App.Font.Size.Overlay.Message}"/>
+                <Setter Property="FontSize" Value="{DynamicResource MahApps.Font.Size.Dialog.Title}"/>
             </Style>
         </Style.Resources>
     </Style>
